syntax="proto3";

option  go_package="/genproto";


package proto;

import "common.proto";
message CreateUserRequest{
  string  Name=1;
  string  LastName=2;
}
message UpdatedUserRequest{
  string  Id=1;
  string Name=2;
  string LasName=3;
}
message UserResponse{
  string Id =1;
  string  Name=2;
  string  Lastname=3;
  string  CreatedAt=4;
  string  UpdatedAt=5;
  string  DeletedAt=6;
}
message   UserFilterRequest{
  string  Name=1;
  string  LastName=2;
  Filter LimitOffset=3;

}
message  UsersResponse{
  repeated UserResponse UsersResponse=1;
}
service UserService{
  rpc CreateUser(CreateUserRequest)returns(Void);
  rpc UpdateUser(UpdatedUserRequest)returns(Void);
  rpc DeleteUser(ByIdRequest)returns(Void);
  rpc GetUser(UserFilterRequest)returns(UsersResponse);
}